--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         No goals have been added yet - please start adding some!
       </p>
       <ul v-else>
-        <li v-for="(goal, index) in goals">{{ index }} - {{ goal }}</li>
+        <li v-for="(goal, index) in goals">
+          {{ index }} - {{ goal }}
+          <button @click="removeGoal(index)">Remove</button>
+        </li>
       </ul>
       <h2>Names</h2>
       <ul>
